[package]
name = "ssh_cnfg"
version = "0.4.0"
authors = [
    "Azriel Hoh <azriel91@gmail.com>",
    "Julien-R44 <https://crates.io/users/Julien-R44>",
    "Chevdor <chevdor@gmail.com>",
]
edition = "2021"
description = "Parses `~/.ssh/config` asynchronously."
repository = "https://github.com/chevdor/ssh_cnfg"
documentation = "https://docs.rs/ssh_cnfg/"
readme = "README.md"
keywords = ["ssh", "async"]
license = "MIT OR Apache-2.0"

# The crate is published as `ssh_cnfg` (crates.io has a flat namespace, so the
# upstream `ssh_cfg` name is unavailable), but the library keeps the `ssh_cfg`
# import name so `use ssh_cfg::...` continues to work.
[lib]
name = "ssh_cfg"

[dependencies]
async-fs = "2"
dirs = "6"
indexmap = "2"
plain_path = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
